--- a/work.css
+++ b/work.css
@@ -46,6 +46,7 @@ body{
   padding: 10px 25px 12px;
   line-height: 100%;
   margin-right: 25px;
+  box-shadow: 0 0 10px rgb(0 0 0 / 50%);
 }
 
 .button:active{
