--- a/work.css
+++ b/work.css
@@ -5,16 +5,17 @@ body{
   font-family: 'PT Sans Narrow', sans-serif;
   letter-spacing: 2px;
 }
-
-
-
 .container{
   max-width: 500px;
   padding: 15px 15px 400px;
   margin: 0 auto;
 }
+
+.arror{
+  background-color: #c31b1b;
+}
 .paragraph{
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   max-width: 500px;
   background-color:#3f4444;
   border-radius: 5px;
@@ -35,6 +36,10 @@ body{
 .input::placeholder{
   color: #dfdfdf;
   font-size: 22px;
+}
+.arror.input::placeholder{
+  color: #dfdfdf;
+  font-size: 16px;
 }
 .acent-color{
   background-color: #625251;
@@ -73,16 +78,15 @@ body{
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
 }
-
-
-
 .acent{
   background-color: #e3c5c5;
   padding: 0 5px;
   border-radius: 5px;
   color: #3e2723;
 }
-
+.accent-background{
+  background-color: #2f3232;
+}
 .unselectable {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none;   /* Chrome/Safari/Opera */
@@ -93,11 +97,20 @@ body{
                                   not supported by any browser */
 }
 
+/* сдвиг placeholder-а в лево при фокусе*/
+
+.input::-webkit-input-placeholder       {text-indent: 0px;   transition: text-indent 0.3s ease;}
+.input::-moz-placeholder                {text-indent: 0px;   transition: text-indent 0.3s ease;}
+.input:-moz-placeholder                 {text-indent: 0px;   transition: text-indent 0.3s ease;}
+.input:-ms-input-placeholder            {text-indent: 0px;   transition: text-indent 0.3s ease;}
+.input:focus::-webkit-input-placeholder {text-indent: -350px; transition: text-indent 0.3s ease;}
+.input:focus::-moz-placeholder          {text-indent: -350px; transition: text-indent 0.3s ease;}
+.input:focus:-moz-placeholder           {text-indent: -350px; transition: text-indent 0.3s ease;}
+.input:focus:-ms-input-placeholder      {text-indent: -350px; transition: text-indent 0.3s ease;}
 
 .margin-bottom-0{
   margin-bottom: 0;
 }
-
 
 @media(max-width: 500px){
   .paragraph{
@@ -116,4 +129,6 @@ body{
     font-size: 26px;
   }
 }
+
+
 
