--- a/work.css
+++ b/work.css
@@ -84,8 +84,13 @@ body{
   border-radius: 5px;
   color: #3e2723;
 }
+.acent.active{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
 .accent-background{
-  background-color: #2f3232;
+  background-color: #88655f;
 }
 .unselectable {
   -webkit-touch-callout: none; /* iOS Safari */
